Fixed issue with tables causing all text to be aligned  right

--- a/static/scss/PUB/_Component_table.scss
+++ b/static/scss/PUB/_Component_table.scss
@@ -25,7 +25,7 @@ table {
 				td {
 					display: block;
 					width: 100%;
-					text-align: right !important;
+					text-align: right;
 
 					&:before {					
 						content: attr(data-th);
